[package]
name = "nseqe"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A Rust library for managing and processing sequences of events."
repository = "https://github.com/tylp/nseqe"
readme = "README.md"

[dependencies]
async-trait = "0.1.88"
saphyr = "0.0.4"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
